--- a/vcastplay-cms/src/app/features/assets/asset-list/asset-list.component.html
+++ b/vcastplay-cms/src/app/features/assets/asset-list/asset-list.component.html
@@ -1,174 +1,274 @@
 <div class="flex flex-col gap-1 h-full">
-    <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
-    <p-card styleClass="h-full" class="flex-1">
-        <ng-template #title>
-            <div class="flex gap-2 items-center">
-                <app-asset-filter class="w-full md:w-[25rem]" (filterChange)="onFilterChange($event)" />
-                <div class="ml-auto flex gap-2">
-
-                    <div class="flex items-center gap-2 block lg:hidden">
-                        <p class="text-base font-normal">View:</p>
-                        <p-selectbutton [options]="assetViewModes" [formControl]="assetViewModeCtrl" optionLabel="label" optionValue="label" [allowEmpty]="false">
-                            <ng-template #item let-item>
-                                <i [class]="item.icon" [pTooltip]="item.label" tooltipPosition="bottom"></i>
-                            </ng-template>
-                        </p-selectbutton>
-                    </div>
-                    <p-button (onClick)="showPrompt.set(true)" class="lg:hidden" pTooltip="Generate AI" tooltipPosition="bottom" icon="pi pi-images" />
-                </div>
-                <div class="ml-auto items-center gap-3 hidden lg:flex">
-                    <p-button (onClick)="showPrompt.set(true)" label="Generate AI" icon="pi pi-images" outlined />
-                    <p-button (onClick)="onClickAddNew()" label="Upload" icon="pi pi-upload"></p-button>
-                </div>
-            </div>
-        </ng-template>
-        
-        <div class="flex flex-col gap-4 h-full">
-            <div class="hidden lg:flex justify-center items-center border-dashed border-2 border-zinc-300 p-5 rounded-lg cursor-pointer hover:bg-zinc-100" 
-                (drop)="onDropFile($event)" (dragover)="onDragOver($event)" (dragleave)="onDragLeave($event)" (click)="fileInput.click()">
-                <p class="text-gray-500"><span class="font-semibold">Drop files here</span> or click to upload</p>
-                <input type="file" multiple (change)="onFileSelect($event)" hidden #fileInput />
-            </div>
-
-            <div class="relative block lg:hidden px-3 gap-4 overflow-y-auto" [ngClass]="{ 
-                'grid grid-cols-2 md:grid-cols-3 gap-4': assetViewModeSignal() == 'Grid',
-                'flex flex-col gap-2': assetViewModeSignal() == 'List'
-            }">
-                <div class="flex items-center justify-center border-dashed border-2 border-gray-400 p-5 
-                    rounded-lg cursor-pointer hover:bg-gray-100" (click)="onClickAddNew()">
-                    <div class="flex flex-col gap-4 items-center justify-center">
-                        <i class="pi pi-plus-circle text-gray-400" style="font-size: 2rem;"></i>
-                        <p>Upload</p>
-                    </div>
-                </div>
-                @for (item of filteredAssets(); track $index) {
-                    <app-asset-list-item [asset]="item" [disableDrag]="true" [showOptions]="true" [actionBtn]="actionBtn" />
-                }
-            </div>
-            
-            <div class="flex-1 min-h-0 hidden lg:block">
-                <p-table
-                    [value]="assetService.loadingSignal() ? utils.tableSkeletonRows : filteredAssets()"
-                    selectionMode="single"
-                    [scrollable]="true" 
-                    [rows]="rows()"
-                    [first]="first()"
-                    scrollHeight="flex"
-                    size="small"
-                    (onPage)="assetService.onPageChange($event)"
-                    stripedRows
-                    paginator
-                >
-                    <ng-template #header>
-                        <tr>
-                            <th [style]="{ width: '80px' }">Preview</th>
-                            <th>Name</th>
-                            <th>Type</th>
-                            <th>Orientation</th>
-                            <th>Category & Sub Category</th>
-                            <th>Duration</th>
-                            <th>Last Update</th>
-                            <th>
-                                <div class="text-center">Actions</div>
-                            </th>
-                        </tr>
-                    </ng-template>
-                    <ng-template #body let-item>
-                        <tr class="text-sm">
-                            <td>
-                                <div class="relative h-15">
-                                    <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center">
-                                        @if(['video', 'image'].includes(item.type)) {
-                                            <img [src]="item.fileDetails.thumbnail" class="max-h-full object-contain" alt="Image">
-                                        } @else {
-                                            @switch (item.type) {
-                                                @case('audio') { <i class="pi pi-volume-up" [style]="{ 'font-size': '2rem'}"></i> }
-                                                @case('web') { <i class="pi pi-globe" [style]="{ 'font-size': '2rem'}"></i> }
-                                                @case('widget') { <i class="pi pi-layout" [style]="{ 'font-size': '2rem'}"></i> }
-                                            }
-                                        }
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="flex flex-col gap-1">
-                                    <p class="font-semibold">{{ item.name }}</p>
-                                    <div class="flex gap-2">
-                                        <p class="text-sm italic">{{ utils.formatSize(item?.fileDetails.size ?? 0) }}</p>
-                                        <p class="text-sm italic">({{ item?.fileDetails.resolution?.width ?? 0 }} x {{ item.fileDetails.resolution?.height ?? 0 }})</p>
-                                    </div>
-                                </div>
-                            </td>
-                            <td><p-tag [value]="item.type.toUpperCase()" severity="info" /></td>
-                            <td><p class="text-sm font-medium">{{ item.fileDetails?.orientation?.toUpperCase() ?? '-' }}</p></td>
-                            <td>
-                                @if (!item.category || !item.subCategory) {
-                                    <p class="text-sm text-red-500 italic">No category available</p>
-                                } @else {
-                                    {{ item.category }} & {{ item.subCategory }}
-                                }
-                            </td>
-                            <td>{{ utils.timeConversion(item.duration) }}</td>
-                            <td>{{ utils.onGetLastUpdatedLabel(item.updatedOn) }}</td>
-                            <td>
-                                <div class="flex flex-row gap-2 items-center justify-center">
-                                    <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item }"></ng-container>
-                                </div>
-                            </td>
-                        </tr>
-                    </ng-template>
-                    <ng-template #emptymessage>
-                        <tr>
-                            <td colspan="9" [height]="20">
-                                <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
-                            </td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-            </div>
+  <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+  <p-card styleClass="h-full" class="flex-1">
+    <ng-template #title>
+      <div class="flex gap-2 items-center">
+        <app-asset-filter class="w-full md:w-[25rem]" (filterChange)="onFilterChange($event)" />
+        <div class="ml-auto flex gap-2">
+          <div class="flex items-center gap-2 block lg:hidden">
+            <p class="text-base font-normal">View:</p>
+            <p-selectbutton
+              [options]="assetViewModes"
+              [formControl]="assetViewModeCtrl"
+              optionLabel="label"
+              optionValue="label"
+              [allowEmpty]="false"
+            >
+              <ng-template #item let-item>
+                <i [class]="item.icon" [pTooltip]="item.label" tooltipPosition="bottom"></i>
+              </ng-template>
+            </p-selectbutton>
+          </div>
+          <p-button
+            (onClick)="showPrompt.set(true)"
+            class="lg:hidden"
+            pTooltip="Generate AI"
+            tooltipPosition="bottom"
+            icon="pi pi-images"
+          />
         </div>
-        
-        <!-- <ng-template #footer>
+        <div class="ml-auto items-center gap-3 hidden lg:flex">
+          <p-button
+            (onClick)="showPrompt.set(true)"
+            label="Generate AI"
+            icon="pi pi-images"
+            outlined
+          />
+          <p-button (onClick)="onClickAddNew()" label="Upload" icon="pi pi-upload"></p-button>
+        </div>
+      </div>
+    </ng-template>
+
+    <div class="flex flex-col gap-4 h-full">
+      <div
+        class="hidden lg:flex justify-center items-center border-dashed border-2 border-zinc-300 p-5 rounded-lg cursor-pointer hover:bg-zinc-100 hover:dark:bg-zinc-800"
+        (drop)="onDropFile($event)"
+        (dragover)="onDragOver($event)"
+        (dragleave)="onDragLeave($event)"
+        (click)="fileInput.click()"
+      >
+        <p class="text-gray-500">
+          <span class="font-semibold">Drop files here</span> or click to upload
+        </p>
+        <input type="file" multiple (change)="onFileSelect($event)" hidden #fileInput />
+      </div>
+
+      <div
+        class="relative block lg:hidden px-3 gap-4 overflow-y-auto"
+        [ngClass]="{
+          'grid grid-cols-2 md:grid-cols-3 gap-4': assetViewModeSignal() == 'Grid',
+          'flex flex-col gap-2': assetViewModeSignal() == 'List'
+        }"
+      >
+        <div
+          class="flex items-center justify-center border-dashed border-2 border-gray-400 p-5 rounded-lg cursor-pointer hover:bg-gray-100"
+          (click)="onClickAddNew()"
+        >
+          <div class="flex flex-col gap-4 items-center justify-center">
+            <i class="pi pi-plus-circle text-gray-400" style="font-size: 2rem"></i>
+            <p>Upload</p>
+          </div>
+        </div>
+        @for (item of filteredAssets(); track $index) {
+        <app-asset-list-item
+          [asset]="item"
+          [disableDrag]="true"
+          [showOptions]="true"
+          [actionBtn]="actionBtn"
+        />
+        }
+      </div>
+
+      <div class="flex-1 min-h-0 hidden lg:block">
+        <p-table
+          [value]="assetService.loadingSignal() ? utils.tableSkeletonRows : filteredAssets()"
+          selectionMode="single"
+          [scrollable]="true"
+          [rows]="rows()"
+          [first]="first()"
+          scrollHeight="flex"
+          size="small"
+          (onPage)="assetService.onPageChange($event)"
+          stripedRows
+          paginator
+        >
+          <ng-template #header>
+            <tr>
+              <th [style]="{ width: '80px' }">Preview</th>
+              <th>Name</th>
+              <th>Type</th>
+              <th>Orientation</th>
+              <th>Category & Sub Category</th>
+              <th>Duration</th>
+              <th>Last Update</th>
+              <th>
+                <div class="text-center">Actions</div>
+              </th>
+            </tr>
+          </ng-template>
+          <ng-template #body let-item>
+            <tr class="text-sm">
+              <td>
+                <div class="relative h-15">
+                  <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center">
+                    @if(['video', 'image'].includes(item.type)) {
+                    <img
+                      [src]="item.fileDetails.thumbnail"
+                      class="max-h-full object-contain"
+                      alt="Image"
+                    />
+                    } @else { @switch (item.type) { @case('audio') {
+                    <i class="pi pi-volume-up" [style]="{ 'font-size': '2rem' }"></i> } @case('web')
+                    { <i class="pi pi-globe" [style]="{ 'font-size': '2rem' }"></i> }
+                    @case('widget') {
+                    <i class="pi pi-layout" [style]="{ 'font-size': '2rem' }"></i> } } }
+                  </div>
+                </div>
+              </td>
+              <td>
+                <div class="flex flex-col gap-1">
+                  <p class="font-semibold">{{ item.name }}</p>
+                  <div class="flex gap-2">
+                    <p class="text-sm italic">
+                      {{ utils.formatSize(item?.fileDetails.size ?? 0) }}
+                    </p>
+                    <p class="text-sm italic">
+                      ({{ item?.fileDetails.resolution?.width ?? 0 }} x
+                      {{ item.fileDetails.resolution?.height ?? 0 }})
+                    </p>
+                  </div>
+                </div>
+              </td>
+              <td><p-tag [value]="item.type.toUpperCase()" severity="info" /></td>
+              <td>
+                <p class="text-sm font-medium">
+                  {{ item.fileDetails?.orientation?.toUpperCase() ?? '-' }}
+                </p>
+              </td>
+              <td>
+                @if (!item.category || !item.subCategory) {
+                <p class="text-sm text-red-500 italic">No category available</p>
+                } @else {
+                {{ item.category }} & {{ item.subCategory }}
+                }
+              </td>
+              <td>{{ utils.timeConversion(item.duration) }}</td>
+              <td>{{ utils.onGetLastUpdatedLabel(item.updatedOn) }}</td>
+              <td>
+                <div class="flex flex-row gap-2 items-center justify-center">
+                  <ng-container
+                    *ngTemplateOutlet="actionBtn; context: { $implicit: item }"
+                  ></ng-container>
+                </div>
+              </td>
+            </tr>
+          </ng-template>
+          <ng-template #emptymessage>
+            <tr>
+              <td colspan="9" [height]="20">
+                <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+
+    <!-- <ng-template #footer>
             <p-paginator [rows]="rows" [totalRecords]="totalRecords"></p-paginator>
         </ng-template> -->
-    </p-card>
+  </p-card>
 </div>
 
 <p-dialog header="Preview" [(visible)]="isShowPreview" [style]="{ width: '50rem' }" modal>
-    <div class="relative h-100 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg">
-        <app-preview-assets class="absolute h-full w-full flex items-center justify-center"
-            [currentContent]="selectedAsset()" [showControls]="true" [autoPlay]="true" />
-    </div>
+  <div
+    class="relative h-100 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg"
+  >
+    <app-preview-assets
+      class="absolute h-full w-full flex items-center justify-center"
+      [currentContent]="selectedAsset()"
+      [showControls]="true"
+      [autoPlay]="false"
+    />
+  </div>
 </p-dialog>
 
-<p-dialog header="Add to playlist" [(visible)]="isShowAddToPlaylist" [style]="{ width: '42rem', height: '520px' }" modal>
-    <app-add-to-playlist [assetForm]="assetForm" />
-    <ng-template #footer>
-        <div class="flex items-center w-full">
-            <p class="text-sm text-red-500 italic">{{ selectedArrPlaylist().length }} playlist(s) selected</p>
-            <div class="flex gap-2 ml-auto">
-                <p-button label="Close" severity="secondary" (onClick)="onClickCancelSaveToPlaylist()" />
-                <p-button label="Save" (onClick)="onClickSaveToPlaylist($event)" [disabled]="selectedArrPlaylist().length == 0" />
-            </div>
-        </div>
-    </ng-template>
+<p-dialog
+  header="Add to playlist"
+  [(visible)]="isShowAddToPlaylist"
+  [style]="{ width: '42rem', height: '520px' }"
+  modal
+>
+  <app-add-to-playlist [assetForm]="assetForm" />
+  <ng-template #footer>
+    <div class="flex items-center w-full">
+      <p class="text-sm text-red-500 italic">
+        {{ selectedArrPlaylist().length }} playlist(s) selected
+      </p>
+      <div class="flex gap-2 ml-auto">
+        <p-button label="Close" severity="secondary" (onClick)="onClickCancelSaveToPlaylist()" />
+        <p-button
+          label="Save"
+          (onClick)="onClickSaveToPlaylist($event)"
+          [disabled]="selectedArrPlaylist().length == 0"
+        />
+      </div>
+    </div>
+  </ng-template>
 </p-dialog>
 
-<p-dialog header="🌟 Welcome to Your Creative AI Assistant!" [(visible)]="showPrompt" [style]="{ width: '36rem' }" [draggable]="false" closable modal>
-    <div class="px-4">
-        <p>Hello! 👋 I'm your AI assistant, here to help you bring your ideas to life. Whether you need to generate an image, 
-            create a video, or craft engaging content, I've got you covered. Just tell me what you need — let's get started! 🚀</p>
+<p-dialog
+  header="🌟 Welcome to Your Creative AI Assistant!"
+  [(visible)]="showPrompt"
+  [style]="{ width: '36rem' }"
+  [draggable]="false"
+  closable
+  modal
+>
+  <div class="px-4">
+    <p>
+      Hello! 👋 I'm your AI assistant, here to help you bring your ideas to life. Whether you need
+      to generate an image, create a video, or craft engaging content, I've got you covered. Just
+      tell me what you need — let's get started! 🚀
+    </p>
+  </div>
+  <ng-template #footer>
+    <div class="flex flex-col gap-3 w-full">
+      <textarea
+        placeholder="Type your prompt here"
+        name="prompt"
+        id="prompt"
+        cols="30"
+        rows="5"
+        pTextarea
+      ></textarea>
+      <p-button
+        styleClass="!w-full"
+        label="Send"
+        icon="pi pi-send"
+        (onClick)="showPrompt.set(false)"
+        fluid
+      />
     </div>
-    <ng-template #footer>
-        <div class="flex flex-col gap-3 w-full">
-            <textarea placeholder="Type your prompt here" name="prompt" id="prompt" cols="30" rows="5" pTextarea></textarea>
-            <p-button styleClass="!w-full" label="Send" icon="pi pi-send" (onClick)="showPrompt.set(false)" fluid />
-        </div>
-    </ng-template>
+  </ng-template>
 </p-dialog>
 
 <ng-template #actionBtn let-item>
-    <p-button (onClick)="onClickEdit(item)" pTooltip="Edit" tooltipPosition="bottom" icon="pi pi-pencil" severity="success" size="small" />
-    <p-button (onClick)="onClickOpenOptions($event, item, actionMenu)" pTooltip="More" tooltipPosition="bottom" icon="pi pi-cog" severity="contrast" size="small" />
-    <p-menu #actionMenu [model]="actionItems" [popup]="true" appendTo="body" />
+  <p-button
+    (onClick)="onClickEdit(item)"
+    pTooltip="Edit"
+    tooltipPosition="bottom"
+    icon="pi pi-pencil"
+    severity="success"
+    size="small"
+  />
+  <p-button
+    (onClick)="onClickOpenOptions($event, item, actionMenu)"
+    pTooltip="More"
+    tooltipPosition="bottom"
+    icon="pi pi-cog"
+    severity="contrast"
+    size="small"
+  />
+  <p-menu #actionMenu [model]="actionItems" [popup]="true" appendTo="body" />
 </ng-template>
