--- a/vcastplay-player/src/app/components/preview-design-layout/preview-design-layout.component.html
+++ b/vcastplay-player/src/app/components/preview-design-layout/preview-design-layout.component.html
@@ -1,6 +1,6 @@
 <div #canvasContainer class="relative origin-center flex items-center justify-center overflow-hidden">
     <!-- <canvas #canvas></canvas> -->
-    @for (layer of designLayout.htmlLayers; track trackById($index, layer)) {
+    @for (layer of contentData.htmlLayers; track trackById($index, layer)) {
         <div class="absolute pointer-events-none z-10" [id]="layer.id" 
             [style]="{ top: layer.top + 'px', left: layer.left + 'px', width: layer.width + 'px', 
                 height: layer.height + 'px', transform: 'rotate(' + layer.rotation + 'deg) translateZ(0)' }">
