--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -1,69 +1,90 @@
-<div #viewport class="relative flex flex-col gap-4 justify-center items-center h-screen relative group overflow-hidden select-none"
-  [ngClass]="{ 'bg-[var(--p-primary-500)]': !isPlay(), 'bg-stone-800': isPlay() }">
-
+<div
+  #viewport
+  class="relative flex flex-col gap-4 justify-center items-center h-screen relative group overflow-hidden select-none"
+  [ngClass]="{ 'bg-[var(--p-primary-500)]': !isPlay(), 'bg-stone-800': isPlay() }"
+>
   <!-- Main Player -->
   <ng-container *ngIf="playerContent() as contentData">
-    @switch (contentData?.type) {
-      @case ('design') {
-        <app-preview-design-layout class="flex-1 h-full w-full flex items-center justify-center" 
-          [ngClass]="{ 'opacity-100': isPlay(), 'opacity-0': !isPlay() }"
-          [viewport]="viewport" [contentData]="contentData" (isDoneRendering)="onDoneRendering($event)" />
-      }
-      @case('playlist') {
-        <app-preview-content-renderer class="relative w-full h-full group bg-stone-800 text-white rounded-lg" 
-          [ngClass]="{ 'opacity-100': isPlay(), 'opacity-0': !isPlay() }"
-          [autoPlay]="true" [contentData]="contentData" />
-      }
-      @default {
-        <app-preview-assets class="absolute h-full w-full flex items-center justify-center" [currentContent]="contentData" 
-          (timeUpdate)="onProgressUpdate(contentData.id, $event)" />
-      }
-    }
+    @switch (contentData?.type) { @case ('design') {
+    <app-preview-design-layout
+      class="flex-1 h-full w-full flex items-center justify-center"
+      [ngClass]="{ 'opacity-100': isPlay(), 'opacity-0': !isPlay() }"
+      [viewport]="viewport"
+      [contentData]="contentData"
+      (isDoneRendering)="onDoneRendering($event)"
+    />
+    } @case('playlist') {
+    <app-preview-content-renderer
+      class="relative w-full h-full group bg-stone-800 text-white rounded-lg"
+      [ngClass]="{ 'opacity-100': isPlay(), 'opacity-0': !isPlay() }"
+      [autoPlay]="true"
+      [contentData]="contentData"
+    />
+    } @default {
+    <app-preview-assets
+      class="absolute h-full w-full flex items-center justify-center"
+      [currentContent]="contentData"
+      (timeUpdate)="onProgressUpdate(contentData.id, $event)"
+    />
+    } }
   </ng-container>
 
   <ng-container *ngIf="!playerContent()">
     <div class="absolute top-0 start-0 flex items-center justify-center p-6">
-      <img class="w-30" src="assets/vcastplay.png" alt="vcastplay 2.0 logo">
+      <img class="w-30" src="assets/vcastplay.png" alt="vcastplay 2.0 logo" />
     </div>
 
     @if (isDev()) {
-      <div class="absolute top-3 right-3 p-2 flex flex-col items-center gap-3">
-        @if (networkService.isOnline()) {
-          <p-chip class="text-xs" [style]="{ 'background-color': 'var(--color-green-200)' }">
-            <div class="h-2 w-2 rounded-xl bg-green-600"></div>
-            <p class="text-green-600 font-semibold">ONLINE</p>
-          </p-chip>
-        } @else {
-          <p-chip class="text-xs" [style]="{ 'background-color': 'var(--color-red-200)' }">
-            <div class="h-2 w-2 rounded-xl bg-red-600"></div>
-            <p class="text-red-600 font-semibold">OFFLINE</p>
-          </p-chip>
-        }
-      </div>
+    <div class="absolute top-3 right-3 p-2 flex flex-col items-center gap-3">
+      @if (networkService.isOnline()) {
+      <p-chip class="text-xs" [style]="{ 'background-color': 'var(--color-green-200)' }">
+        <div class="h-2 w-2 rounded-xl bg-green-600"></div>
+        <p class="text-green-600 font-semibold">ONLINE</p>
+      </p-chip>
+      } @else {
+      <p-chip class="text-xs" [style]="{ 'background-color': 'var(--color-red-200)' }">
+        <div class="h-2 w-2 rounded-xl bg-red-600"></div>
+        <p class="text-red-600 font-semibold">OFFLINE</p>
+      </p-chip>
+      }
+    </div>
     }
 
     <div class="absolute h-full w-full flex flex-col gap-4 items-center justify-center">
-      <p class="text-5xl md:text-8xl font-bold text-white tracking-[1.25rem] md:tracking-[1.75rem]">{{ systemInfo()?.playerCode }}</p>
+      <p class="text-5xl md:text-8xl font-bold text-white tracking-[1.25rem] md:tracking-[1.75rem]">
+        {{ systemInfo()?.playerCode }}
+      </p>
       <p class="text-lg font-light text-white">Player Code</p>
     </div>
   </ng-container>
-  
 
   <div class="absolute bottom-0 left-0 flex items-center gap-1 p-2 w-full">
     <div class="flex gap-3">
-      <p-button label="Asset" (onClick)="onClickSetContent('asset')" severity="secondary" size="small" />
-      <p-button label="Playlist" (onClick)="onClickSetContent('playlist')" severity="secondary" size="small" />
-      <p-button label="Design" (onClick)="onClickSetContent('design')" severity="secondary" size="small" />
+      <p-button
+        label="Asset"
+        (onClick)="onClickSetContent('asset')"
+        severity="secondary"
+        size="small"
+      />
+      <p-button
+        label="Playlist"
+        (onClick)="onClickSetContent('playlist')"
+        severity="secondary"
+        size="small"
+      />
+      <p-button
+        label="Design"
+        (onClick)="onClickSetContent('design')"
+        severity="secondary"
+        size="small"
+      />
       <p-button label="Stop" (onClick)="onClikcStopPreview()" severity="secondary" size="small" />
       @if (platform == 'desktop') {
-        <p-button label="Notepad" (onClick)="onClickNotepad()" severity="secondary" size="small" />
+      <p-button label="Notepad" (onClick)="onClickNotepad()" severity="secondary" size="small" />
       }
-      
     </div>
-    <p class="text-[10px] md:text-sm text-zinc-300 ml-auto">{{ systemInfo()?.code ?? '000000000' }}: {{ systemInfo()?.appVersion ?? '0.0.0' }}</p>
+    <p class="text-[10px] md:text-sm text-zinc-300 ml-auto">
+      {{ systemInfo()?.code ?? '000000000' }}: {{ systemInfo()?.appVersion ?? '0.0.0' }}
+    </p>
   </div>
-
-  <!-- @if (platform == 'desktop') {
-    <app-progress-bar class="absolute bottom-10 left-0 w-full px-4 mb-4" />
-  } -->
 </div>
