--- a/vcastplay-player/src/app/components/preview-assets/preview-assets.component.html
+++ b/vcastplay-player/src/app/components/preview-assets/preview-assets.component.html
@@ -1,13 +1,13 @@
 @switch (currentContent?.type) {
     @case ('video') {
-        <video #video class="max-h-full w-full h-full object-fill" [src]="currentContent?.link | safeurl" preload="metadata"
+        <video #video class="max-h-full w-full h-full object-fill" preload="metadata"
             [attr.poster]="null" [controls]="false" [autoplay]="true" [muted]="true" [loop]="true" (ended)="onVideoEnded($event)"></video>
     }
     @case ('web') {
-        <iframe class="w-full h-full border-none" [src]="currentContent?.link | safeurl"></iframe>
+        <iframe #iframe class="w-full h-full border-none"></iframe>
     }
     @case ('image') {
-        <img class="max-h-full h-full object-fill w-full" [src]="currentContent?.link | safeurl" [alt]="currentContent?.name || 'preview image'" />
+        <img #image class="max-h-full h-full object-fill w-full" [alt]="currentContent?.name || 'preview image'" />
     }
     @default {
         <div class="h-full w-full flex justify-center items-center">
