--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -79,6 +79,12 @@
         severity="secondary"
         size="small"
       />
+      <p-button
+        label="Design 2"
+        (onClick)="onClickSetContent('design2')"
+        severity="secondary"
+        size="small"
+      />
       <p-button label="Stop" (onClick)="onClikcStopPreview()" severity="secondary" size="small" />
       @if (platform == 'desktop') {
       <p-button label="Notepad" (onClick)="onClickNotepad()" severity="secondary" size="small" />
