--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -4,7 +4,7 @@
   [ngClass]="{ 'bg-[var(--p-primary-500)]': !isPlay(), 'bg-stone-800': isPlay() }"
 >
   <!-- Main Player -->
-  <ng-container *ngIf="playerContent() as contentData">
+  <ng-container *ngIf="currentContent as contentData">
     @switch (contentData?.type) { @case ('design') {
     <app-preview-design-layout
       class="flex-1 h-full w-full flex items-center justify-center"
@@ -30,7 +30,7 @@
     } }
   </ng-container>
 
-  <ng-container *ngIf="!playerContent()">
+  <ng-container *ngIf="!currentContent">
     <div class="absolute top-0 start-0 flex items-center justify-center p-6">
       <img class="w-30" src="assets/vcastplay.png" alt="vcastplay 2.0 logo" />
     </div>
