--- a/vcastplay-player/src/app/main-display/main-display.component.html
+++ b/vcastplay-player/src/app/main-display/main-display.component.html
@@ -21,12 +21,12 @@
       [contentData]="contentData"
     />
     } @default {
-      <app-preview-assets
-        class="absolute h-full w-full flex items-center justify-center"
-        [ngClass]="{ 'opacity-100': isPlay(), 'opacity-0': !isPlay() }"
-        [currentContent]="contentData"
-        (timeUpdate)="onProgressUpdate(contentData.id, $event)"
-      />
+    <app-preview-assets
+      class="absolute h-full w-full flex items-center justify-center"
+      [ngClass]="{ 'opacity-100': isPlay(), 'opacity-0': !isPlay() }"
+      [currentContent]="contentData"
+      (timeUpdate)="onProgressUpdate(contentData.id, $event)"
+    />
     } }
   </ng-container>
 
@@ -60,34 +60,50 @@
   </ng-container>
 
   <div class="absolute bottom-0 left-0 flex items-center gap-1 p-2 w-full">
-    <div class="flex gap-3">
+    <div class="grid grid-cols-5 gap-3">
       <p-button
         label="Asset"
         (onClick)="onClickSetContent('asset')"
         severity="secondary"
         size="small"
+        fluid
       />
       <p-button
         label="Playlist"
         (onClick)="onClickSetContent('playlist')"
         severity="secondary"
         size="small"
+        fluid
       />
       <p-button
         label="Design"
         (onClick)="onClickSetContent('design')"
         severity="secondary"
         size="small"
+        fluid
       />
       <p-button
         label="Design 2"
         (onClick)="onClickSetContent('design2')"
         severity="secondary"
         size="small"
+        fluid
       />
-      <p-button label="Stop" (onClick)="onClikcStopPreview()" severity="secondary" size="small" />
-      @if (platform == 'desktop') {
-      <p-button label="Notepad" (onClick)="onClickNotepad()" severity="secondary" size="small" />
+      <p-button
+        label="Stop"
+        (onClick)="onClikcStopPreview()"
+        severity="secondary"
+        size="small"
+        fluid
+      />
+      @if (['android', 'desktop'].includes(platform)) {
+      <!-- <p-button label="Notepad" (onClick)="onClickNotepad()" severity="secondary" size="small" /> -->
+      <p-button
+        label="Setting"
+        (onClick)="showSettings.set(true)"
+        severity="secondary"
+        size="small"
+      />
       }
     </div>
     <p class="text-[10px] md:text-sm text-zinc-300 ml-auto">
@@ -95,3 +111,115 @@
     </p>
   </div>
 </div>
+
+<!-- Remove this code -->
+<p-dialog
+  header="Settings"
+  [(visible)]="showSettings"
+  [style]="{ width: '20rem' }"
+  [resizable]="false"
+  (onHide)="showSettings.set(false)"
+  draggable
+  modal
+>
+  <form class="flex flex-col gap-3" [formGroup]="settingsForm">
+    <div class="flex gap-3">
+      <label for="left" class="text-sm">Always On:</label>
+      <p-toggleswitch class="ml-auto" formControlName="alwaysOn" />
+    </div>
+    <div class="flex gap-3">
+      <label for="left" class="text-sm">Audio:</label>
+      <p-toggleswitch class="ml-auto" formControlName="toggleAudio" />
+    </div>
+    <div class="flex gap-3">
+      <label for="left" class="text-sm">Content Logs:</label>
+      <p-toggleswitch class="ml-auto" formControlName="contentLogs" />
+    </div>
+    @if (['desktop'].includes(platform)) {
+    <div class="flex gap-3">
+      <label for="left" class="text-sm">Always On Top:</label>
+      <p-toggleswitch class="ml-auto" formControlName="alwaysOnTop" />
+    </div>
+    <div class="flex gap-3">
+      <label for="fullscreen" class="text-sm">Fullscreen:</label>
+      <p-checkbox
+        class="ml-auto"
+        inputId="fullscreen"
+        label="fullscreen"
+        formControlName="fullscreen"
+        binary
+      />
+    </div>
+    <div class="flex gap-3">
+      <label for="resizable" class="text-sm">Resizable:</label>
+      <p-checkbox
+        class="ml-auto"
+        inputId="resizable"
+        label="resizable"
+        formControlName="resizable"
+        binary
+      />
+    </div>
+    <div class="flex gap-3">
+      <label for="height" class="text-sm">Height:</label>
+      <p-inputnumber
+        class="ml-auto"
+        formControlName="height"
+        size="small"
+        inputId="height"
+        [min]="0"
+        placeholder="height"
+        [useGrouping]="false"
+        [inputStyle]="{ width: '5rem' }"
+        showButtons
+      />
+    </div>
+    <div class="flex gap-3">
+      <label for="width" class="text-sm">Width:</label>
+      <p-inputnumber
+        class="ml-auto"
+        formControlName="width"
+        size="small"
+        inputId="width"
+        [min]="0"
+        placeholder="width"
+        [useGrouping]="false"
+        [inputStyle]="{ width: '5rem' }"
+        showButtons
+      />
+    </div>
+    <div class="flex gap-3">
+      <label for="top" class="text-sm">Top:</label>
+      <p-inputnumber
+        class="ml-auto"
+        formControlName="top"
+        size="small"
+        inputId="top"
+        [min]="0"
+        placeholder="top"
+        [useGrouping]="false"
+        [inputStyle]="{ width: '5rem' }"
+        showButtons
+      />
+    </div>
+    <div class="flex gap-3">
+      <label for="left" class="text-sm">Left:</label>
+      <p-inputnumber
+        class="ml-auto"
+        formControlName="left"
+        size="small"
+        inputId="left"
+        [min]="0"
+        placeholder="left"
+        [useGrouping]="false"
+        [inputStyle]="{ width: '5rem' }"
+        showButtons
+      />
+    </div>
+    }
+  </form>
+  <ng-template #footer>
+    <p-button label="Clear Logs" severity="secondary" (onClick)="onClickClearLogs()" />
+    <p-button label="Apply" severity="success" (onClick)="onClickApplySettings()" />
+  </ng-template>
+</p-dialog>
