--- a/vcastplay-cms/src/app/features/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/features/playlist/playlist-details/playlist-details.component.html
@@ -111,7 +111,7 @@
             />
           </div>
           <div class="flex items-center gap-2">
-            <label for="speed" class="text-sm">Transition Speed:</label>
+            <label for="speed" class="text-sm">Speed:</label>
             <p-inputnumber
               formControlName="speed"
               size="small"
