--- a/vcastplay-cms/src/app/features/screens/screen-list/screen-list.component.html
+++ b/vcastplay-cms/src/app/features/screens/screen-list/screen-list.component.html
@@ -131,8 +131,8 @@
 </p-dialog>
 
 <p-dialog [(visible)]="showDownload" styleClass="w-[20rem] md:w-[40rem] h-auto" modal>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 justify-center items-center">
-        <div class="col-span-1 md:col-span-2 text-center text-xl font-semibold">Choose your device</div>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 justify-center items-center">
+        <div class="col-span-1 md:col-span-3 text-center text-xl font-semibold">Choose your device</div>
         <p-card class="hover:shadow-2xl">
             <div class="flex flex-col gap-6 items-center justify-center p-6 hover:cursor-pointer" (click)="onClickDownload('desktop')">
                 <i class="pi pi-desktop text-zinc-500" style="font-size: 5rem;"></i>
@@ -143,6 +143,12 @@
             <div class="flex flex-col gap-6 items-center justify-center p-6 hover:cursor-pointer" (click)="onClickDownload('android')">
                 <i class="pi pi-android text-lime-500" style="font-size: 5rem;"></i>
                 <p class="font-semibold">Android</p>
+            </div>
+        </p-card>
+        <p-card class="hover:shadow-2xl">
+            <div class="flex flex-col gap-6 items-center justify-center p-6 hover:cursor-pointer" (click)="onClickDownload('web')">
+                <i class="pi pi-globe text-blue-500" style="font-size: 5rem;"></i>
+                <p class="font-semibold">Browser</p>
             </div>
         </p-card>
     </div>
